src/test/deca/context/valid/created/testCast/classHeritage.deca
// Description :
//    Faire un upcast
//
// Résultats :
//   OK


class A{}
class B extends A{}


{
    A b = new A();
    B a = new B();
    b = (A)(a);
}