src/test/deca/context/invalid/created/testPass3/noMethCall.deca
// Description :
//    Test invalide : Opération d'addition sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11: MethodNotFoundException: There is no method with the specified name.

class A{}
{
    A a = new A();
    a.noSuchMeth();
}